--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+body {
+  background-image: https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg('img_girl.jpg');
+}
+</style>
     <title>Página 1</title>
 </head>
 <body>
