--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
 body {
-  background-image: https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg('img_girl.jpg');
+  background-image: url('https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg');
 }
 </style>
     <title>Página 1</title>
