--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
 body {
   background-image: url('https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg');
+    <img src="https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg" alt="Girl in a jacket" width="1024" height="768">
 }
 </style>
     <title>Página 1</title>
