--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ body {
     <title>Página 1</title>
 </head>
 <body>
-    <h1>Página 1</h1>
-    <p>Esta é a primeira página.</p>
+    <h1 style="font-size:300%;"> <p style="font-family:verdana;">Pagina 1</h1>
+    <p style="font-size:160%;"> <p style="font-family:courier;">Está é a primeira página.</p>
     <a href="index2.html">Ir para a Página 2</a>
 </body>
 </html>
