--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     <title>Página 1</title>
 </head>
 <body>
-    <h1 style="font-size:300%;"> <p style="font-family:verdana;">Pagina 1</h1>
+    <h1 style="font-size:300%;"> <p style="color:Tomato;"> <p style="font-family:verdana;">Pagina 1</h1>
     <p style="font-size:160%;"> <p style="font-family:courier;">Está é a primeira página.</p>
     <a href="index2.html">Ir para a Página 2</a>
 </body>
