--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <style>
 body {
-  background-image: url('https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg');
-    <img src="https://img.lovepik.com/background/20211022/small/lovepik-black-creative-background-image_500872896.jpg" alt="Girl in a jacket" width="1024" height="768">
+  background-image: url('https://i.pinimg.com/originals/05/aa/82/05aa82da3c553f489a52d26771161285.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 </style>
     <title>Página 1</title>
 </head>
 <body>
-    <h1 style="font-size:400%;"> <p style="color:White;"> <p style="font-family:verdana;">Pagina 1</h1>
-    <p style="font-size:200%;"> <p style="font-family:courier;">Está é a primeira página.</p>
-    <a href="index2.html">Ir para a Página 2</a>
+    <h1 style="font-size:400%;"> 
+        <p style="color:White;"> Pagina 1</h1>
+    <p style="font-size:200%;"> 
+        <p style="color:White;"> Está é a primeira página. </p>
+        <button onclick="document.location='index2.html'">Ir para a página 2</button>
 </body>
 </html>
